// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`component/file_preview/file_progress_preview should match snapshot 1`] = `
<div>
  <div
    class="file-preview post-image__column"
    data-client-id="clientId"
  >
    <div
      class="post-image__thumbnail"
    >
      <div
        class="file-icon image"
      />
    </div>
    <div
      class="post-image__details"
    >
      <div
        class="post-image__detail_wrapper"
      >
        <div
          class="post-image__detail"
        >
          <span
            class="post-image__name"
          >
            test_filename
          </span>
          <span
            class="post-image__uploadingTxt"
          >
            Uploading...
            <span>
               (50%)
            </span>
          </span>
        </div>
      </div>
      <div>
        <a
          class="file-preview__remove"
        >
          <i
            class="icon icon-close"
          />
        </a>
      </div>
      <div
        class="post-image__progressBar progress"
      >
        <div
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="50"
          class="progress-bar"
          role="progressbar"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`component/file_preview/file_progress_preview snapshot for percent value undefined 1`] = `
<div>
  <div
    class="file-preview post-image__column"
    data-client-id="clientId"
  >
    <div
      class="post-image__thumbnail"
    >
      <div
        class="file-icon image"
      />
    </div>
    <div
      class="post-image__details"
    >
      <div
        class="post-image__detail_wrapper"
      >
        <div
          class="post-image__detail"
        >
          <span
            class="post-image__name"
          >
            test_filename
          </span>
          <span
            class="post-image__uploadingTxt"
          >
            Uploading...
            <span>
               (0%)
            </span>
          </span>
        </div>
      </div>
      <div>
        <a
          class="file-preview__remove"
        >
          <i
            class="icon icon-close"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
